# simple_nmea_simulator

./: README.md  pyproject.toml
configs/: circle.json  line.json.json  rectangle.json.json
nmea_simulator/: __init__.py  __main__.py  cli.py  gps_tracker.py  messages.py  server.py
